# tinyc

./: .clang-format  CMakeLists.txt
include/tinyc/: cpp.h  diag.h  lex.h  pp-token.h  repo.h  source.h  span.h  string.h  token.h
include/tinyc/cpp/: context.h  define.h  helper.h  macro.h  params.h
src/: CMakeLists.txt  cache.c  cache.h  context.c  context.h  cpp.c  diag.c  expr.h  input.h  lex.c  lexer.cpp  lexer.h  main.c  main.cpp  memory.c  memory.h  panic.c  panic.h  parser.cpp  parser.h  pp-token.c  repo.c  report.c  report.h  source.c  span.c  span.cpp  span.h  stream.c  stream.h  string.c  string.h  token.c  token.cpp  token.h  utility.cpp  utility.h  vector.c  vector.h
src/codegen/: codegen.cpp  codegen.h  state.h  symtable.h  tycheck.cpp  tycheck.h
src/collections/: dict.c  dict.h  string.c  string.h  vector.c  vector.h
src/cpp/: context.c  context.h  cpp.c  cpp.h  define.c  helper.c  macro.c  params.c  stream.c  stream.h  token.c  token.h
src/input/: cache.c  cache.cpp  cache.h  input.c  input.cpp  input.h  stream.c  stream.cpp  stream.h
src/lex/: lex.c  lex.h  token.c  token.h
src/lexer/: error.h  lexer.c  lexer.cpp  lexer.h  stream.c  stream.cpp  stream.h  token.c  token.cpp  token.h
src/parse/: ast.c  ast.h  context.c  context.h  decl.c  decl.h  expr.c  expr.h  fun_def.c  fun_def.h  parse.c  parse.h  stmt.c  stmt.h  stream.c  stream.h  type.c  type.h  utils.h
src/parse/ast/: decl.c  decl.h  expr.c  expr.h  fun_def.c  fun_def.h  stmt.c  stmt.h  type.c  type.h  unit.c  unit.h
src/parser/: ast.c  ast.h  decl.cpp  decl.h  error.h  expr.cpp  expr.h  node.h  parser.c  parser.cpp  parser.h  parser_decl.c  parser_decl.h  parser_expr.c  parser_expr.h  parser_stmt.c  parser_stmt.h  program.h  stmt.h  type.h  utils.c  utils.h
src/parser/type/: quantifier.h  type.cpp  type.h
src/parser/type/specifier/: builtin.h  enum.h  specifier.h  struct.h  typedef.h  union.h
src/preprocess/: error.h  macro.h  preprocess.cpp  preprocess.h
src/preprocessor/: error.h  macro.c  macro.h  preprocessor.c  preprocessor.cpp  preprocessor.h  table.c  table.h
src/report/: color.h  error.c  error.h  panic.c  panic.h  report.cpp  report.h  reportable.h
test/: CMakeLists.txt  repo.c  source.c  span.c  string.c  token.c
test/cpp/: context.c  define.c  macro.c  params.c
